feature: batch delete.
