# router/router.go
@@ -14,10 +14,12 @@ func RegisterRouter(r *gin.Engine) {
 		apiV1.GET("/sent-mails", api.ListSentMails)
 		apiV1.POST("/sent-mails", api.SendMail)
 		apiV1.DELETE("/sent-mails/:id", api.DeleteSentMail)
+		apiV1.POST("/sent-mails/any/batch-deletions", api.DeleteSentMailsInBatch)
 
 		apiV1.GET("/contacts", api.ListContacts)
 		apiV1.POST("/contacts", api.AddContact)
 		apiV1.DELETE("/contacts/:id", api.DeleteContact)
+		apiV1.POST("/contacts/any/batch-deletions", api.DeleteContactsInBatch)
 	}
 	// swagger router and BasePath
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
